# psylib

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
src/: CMakeLists.txt  Error.c  Error.h  GLError.c  GLError.h  Shader.c  Shader.h  ShaderProgram.c  ShaderProgram.h  Window.c  Window.h  psy.pc.in  psy_config.h.in  psy_init.c  psy_init.h
src/gl/: GLError.c  GLError.h  gl_extensions.c  gl_extensions.h  glad.c  glad.h  includes_gl.h  readme.txt
test/: CMakeLists.txt  error.c  glerror.c  globals.c  globals.h  glprogram.c  glshader.c  psy_test_macros.h  suites.h  unit-test.c  window.c
test/gl_shaders/: test_fragment_shader.frag  test_fragment_shader_es.frag  test_vertex_shader.vert  test_vertex_shader_es.vert
utils/: createfile.py
